# cgol

./: CMakeLists.txt  README.md  clang-format.bash
include/cgol/: cursor_control.hpp  cursor_movement.hpp  grid.hpp  rle_parser.hpp  termcolor.hpp  terminal_size.hpp  utils.hpp
samples/: README.md
src/: grid.cpp  main.cpp  rle_parser.cpp
